# IPP-2-Sparse-Poly-Calc

./: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md  part_1.md  part_2.md  part_3.md
src/: main.c  poly_example.c  poly_test.c
src/calc_core/: calc.c  calc.h  calc_engine.c  calc_engine.h  line_parsing.c  line_structures.h  menu.c  menu.h  parsing.c  parsing.h
src/poly_core/: poly.c  poly.h  poly_structures.h
src/test/: README.md  poly_test.c  poly_test_1.c
src/test/poly_examples_2/: error_command.err  error_command.in  error_command.out  example_arithmetic.out  example_others.in
src/test/poly_tests_2/: binary.err  binary.in  error_command.err  error_command.in  error_poly.err  error_poly.in  error_va.err1  error_va.err2  error_va.err3  error_va.err4  error_va.in  example_arithmetic.in  example_others.out  example_print.in  example_print.out  ignore.err1  ignore.err2  ignore.in  limits.in  limits.out  long_row_many_var.out  many_rows.out  no_newline.in  parse_print.in  parse_print.out  zero.err  zero.in
src/utils/: helper_funcs.c  helper_funcs.h  safe_allocations.h  vector.c  vector.h
